--- a/.github/workflows/job-deploy-infrastructure.yml
+++ b/.github/workflows/job-deploy-infrastructure.yml
@@ -37,6 +37,8 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+          role-to-assume: ${{ secrets.USER_ROLE_TO_ASSUME }}
+          role-duration-seconds: 3600
 
       - name: Download Terraform Plan from S3
         run: aws s3 cp s3://matchya-terraform/github-actions-artifacts/${{ inputs.environment }}/plans/${{ inputs.component }}.tfplan terraform/${{ inputs.component }}/${{ inputs.component }}.tfplan
