--- a/.github/workflows/pull-request-production.yml
+++ b/.github/workflows/pull-request-production.yml
@@ -10,6 +10,10 @@ on:
       - synchronize
       - edited
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   check-infrastructure-changes:
     name: Check Infrastructure Changes
