--- a/.github/workflows/dispatch-deploy-infrastructure.yml
+++ b/.github/workflows/dispatch-deploy-infrastructure.yml
@@ -12,6 +12,10 @@ on:
         required: true
         default: "Staging"
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   plan-shared:
     name: Plan
