--- a/.github/workflows/dispatch-deploy-website.yml
+++ b/.github/workflows/dispatch-deploy-website.yml
@@ -12,6 +12,10 @@ on:
         required: true
         default: "Staging"
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   deploy-website:
     name: Deployment
