--- a/.github/workflows/pull-request-staging.yml
+++ b/.github/workflows/pull-request-staging.yml
@@ -2,13 +2,13 @@ name: PR Pipeline (Staging)
 
 on:
   pull_request:
-    # branches:
-    #   - staging
-    # types:
-    #   - opened
-    #   - reopened
-    #   - synchronize
-    #   - edited
+    branches:
+      - staging
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - edited
 
 permissions:
   id-token: write
