fix(ci): assuming role doesn't work (#1073)

--- a/.github/workflows/job-plan-infrastructure.yml
+++ b/.github/workflows/job-plan-infrastructure.yml
@@ -35,7 +35,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-          role-to-assume: ${{ secrets.USER_ROLE_TO_ASSUME }}
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           role-duration-seconds: 3600
 
       - name: Setup SSH Key (Environment)
