fix(ci): github actions commenting infrastructure plan returns 403 (#1076)

--- a/.github/workflows/dispatch-deploy-infrastructure.yml
+++ b/.github/workflows/dispatch-deploy-infrastructure.yml
@@ -12,9 +12,7 @@ on:
         required: true
         default: "Staging"
 
-permissions:
-  id-token: write
-  contents: read
+permissions: write-all
 
 jobs:
   plan-shared:
