--- a/.github/workflows/dispatch-maintenance-mode.yml
+++ b/.github/workflows/dispatch-maintenance-mode.yml
@@ -8,9 +8,7 @@ on:
         required: true
         default: "enter"
 
-permissions:
-  id-token: write
-  contents: read
+permissions: write-all
 
 jobs:
   run:
