--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@rudderstack/analytics-js": "^3.0.0-beta.20",
     "@sentry/react": "^7.93.0",
     "@sentry/vite-plugin": "^2.10.2",
