--- a/lambdas/company/package.json
+++ b/lambdas/company/package.json
@@ -6,7 +6,7 @@
     "deploy:dev": "sls deploy --config serverless.dev.yml",
     "deploy:staging": "sls deploy --param=\"arch=arm64\" --stage staging --config serverless.yml",
     "remove:dev": "sls remove --config serverless.dev.yml",
-    "remove:staging": "sls remove --param=\"arch=arm64\" --stage staging --config serverless.yml",
+    "remove:staging": "sls remove --stage staging --config serverless.yml",
     "release": "semantic-release"
   },
   "author": "matchya",
