--- a/.github/workflows/pull-request-staging.yml
+++ b/.github/workflows/pull-request-staging.yml
@@ -1,14 +1,15 @@
 name: PR Pipeline (Staging)
 
 on:
-  pull_request:
-    branches:
-      - staging
-    types:
-      - opened
-      - reopened
-      - synchronize
-      - edited
+  workflow_dispatch:
+  # pull_request:
+  #   branches:
+  #     - staging
+  #   types:
+  #     - opened
+  #     - reopened
+  #     - synchronize
+  #     - edited
 
 permissions: write-all
 
