revert(ci): temporarily remove all on triggers

--- a/.github/workflows/merge-production.yml
+++ b/.github/workflows/merge-production.yml
@@ -1,9 +1,10 @@
 name: Merge Pipeline (Production)
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - main
 
 jobs:
   check-infrastructure-changes:
