--- a/.github/workflows/pull-request-develop.yml
+++ b/.github/workflows/pull-request-develop.yml
@@ -1,14 +1,15 @@
 name: PR Pipeline (Develop)
 
 on:
-  pull_request:
-    branches:
-      - develop
-    types:
-      - opened
-      - reopened
-      - synchronize
-      - edited
+  workflow_dispatch:
+  # pull_request:
+  #   branches:
+  #     - develop
+  #   types:
+  #     - opened
+  #     - reopened
+  #     - synchronize
+  #     - edited
 
 jobs:
   unit-tests:
@@ -25,7 +26,7 @@ jobs:
             "candidate",
             "company",
             "interview",
-            "quiz"
+            "quiz",
           ]
     steps:
       - name: Fetch Repository
@@ -65,7 +66,7 @@ jobs:
             "company",
             "assessment",
             "interview",
-            "quiz"
+            "quiz",
           ]
     steps:
       - name: Fetch Repository
